--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="jstest.js"></script>
+    <script src="jquery-3.6.0.js"></script>
 </head>
 <body>
 <!-- HTML结构 -->
@@ -21,6 +22,47 @@
         <p>Scheme</p>
         <p>Haskell</p>
     </div>
+
+    <form id="test-form">
+        <input type="text" name="test">
+        <button type="button" onclick="doSubmitForm()">Submit</button>
+    </form>
+
+    <form method="post" action="http://localhost/test" enctype="multipart/form-data">
+        <p>图片预览：</p>
+        <p></p><div id="test-image-preview" style="border: 1px solid #ccc; width: 100%; height: 200px; background-size: contain; background-repeat: no-repeat; background-position: center center;"></div><p></p>
+        <p>
+            <input type="file" id="test-image-file" name="test">
+        </p>
+        <p id="test-file-info"></p>
+    </form>
+    <canvas id="test-canvas" width="300" height="200"></canvas>
+
+    <script>
+        var divs = $('#test-div')
+    </script>
+
+    <script>
+        let fileInput = document.getElementById("test-image-file");
+        let info = document.getElementById("test-file-info");
+        let preview = document.getElementById("test-image-preview");
+
+        fileInput.addEventListener("change",function () {
+            var file = fileInput.files[0];
+
+            info.innerHTML = '文件: ' + file.name + '<br>' +
+                '大小: ' + file.size + '<br>' +
+                '修改: ' + file.lastModifiedDate;
+
+            let reader = new FileReader();
+            reader.onload=function (e) {
+                var data = e.target.result;
+                preview.style.backgroundImage = 'url(' + data + ')';
+            }
+
+            reader.readAsDataURL(file);
+        })
+    </script>
 </div>
 </body>
 </html>
